--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "TableOpen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "node ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "morgan": "^1.9.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "axios": "^0.18.0"
   }
 }
